src/api/dcps/gapi/include/gapi.h

/*
 * typedef HANDLE_TYPE_NATIVE InstanceHandle_t;
 */
typedef GAPI_HANDLE_TYPE_NATIVE gapi_instanceHandle_t;
/*
 * typedef long ReturnCode_t;
 */
typedef gapi_long gapi_returnCode_t;
typedef struct {
    gapi_unsigned_long _maximum;
    gapi_unsigned_long _length;
    gapi_instanceHandle_t *_buffer;
    gapi_boolean _release;
} gapi_instanceHandleSeq;
typedef gapi_unsigned_long gapi_statusMask;
typedef gapi_object gapi_topic;
typedef gapi_object gapi_dataWriter;
typedef gapi_object gapi_publisher;
struct gapi_dataWriterListener {
    void *listener_data;
    gapi_listener_OfferedDeadlineMissedListener on_offered_deadline_missed;
    gapi_listener_OfferedIncompatibleQosListener on_offered_incompatible_qos;
    gapi_listener_LivelinessLostListener on_liveliness_lost;
    gapi_listener_PublicationMatchedListener on_publication_match;
};
/*     ReturnCode_t
 *     set_qos(
 *         in DataWriterQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_set_qos (
    gapi_dataWriter _this,
    const gapi_dataWriterQos *qos);
/*     ReturnCode_t
 *     get_qos(
 *         inout DataWriterQos qos);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_qos (
    gapi_dataWriter _this,
    gapi_dataWriterQos *qos);
/*     ReturnCode_t
 *     set_listener(
 *         in DataWriterListener a_listener,
 *         in StatusKindMask mask);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_set_listener (
    gapi_dataWriter _this,
    const struct gapi_dataWriterListener *a_listener,
    const gapi_statusMask mask);
/*     DataWriterListener
 *     get_listener();
 */
OS_API struct gapi_dataWriterListener
gapi_dataWriter_get_listener (
    gapi_dataWriter _this);
/*     Topic
 *     get_topic();
 */
OS_API gapi_topic
gapi_dataWriter_get_topic (
    gapi_dataWriter _this);
/*     Publisher
 *     get_publisher();
 */
OS_API gapi_publisher
gapi_dataWriter_get_publisher (
    gapi_dataWriter _this);
/* ReturnCode_t
 *   wait_for_acknowledgments(
 *      in Duration_t max_wait);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_wait_for_acknowledgments (
    gapi_dataWriter _this,
    const gapi_duration_t *max_wait);
/*     // Access the status
 *     LivelinessLostStatus
 *     get_liveliness_lost_status();
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_liveliness_lost_status (
    gapi_dataWriter _this,
    gapi_livelinessLostStatus * status);
/*     OfferedDeadlineMissedStatus
 *     get_offered_deadline_missed_status();
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_offered_deadline_missed_status (
    gapi_dataWriter _this,
    gapi_offeredDeadlineMissedStatus * status);
/*     OfferedIncompatibleQosStatus
 *     get_offered_incompatible_qos_status();
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_offered_incompatible_qos_status (
    gapi_dataWriter _this,
    gapi_offeredIncompatibleQosStatus * status);
/*     PublicationMatchedStatus
 *     get_publication_matched_status();
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_publication_matched_status (
    gapi_dataWriter _this,
    gapi_publicationMatchedStatus * status);
/*     ReturnCode_t
 *     assert_liveliness();
 */
OS_API gapi_returnCode_t
gapi_dataWriter_assert_liveliness (
    gapi_dataWriter _this);
/*     ReturnCode_t
 *     get_matched_subscriptions(
 *         inout InstanceHandleSeq subscription_handles);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_matched_subscriptions (
    gapi_dataWriter _this,
    gapi_instanceHandleSeq *subscription_handles);
/*     ReturnCode_t
 *     get_matched_subscription_data(
 *         inout SubscriptionBuiltinTopicData subscription_data,
 *         in InstanceHandle_t subscription_handle);
 */
OS_API gapi_returnCode_t
gapi_dataWriter_get_matched_subscription_data (
    gapi_dataWriter _this,
    gapi_subscriptionBuiltinTopicData *subscription_data,
    const gapi_instanceHandle_t subscription_handle);